--- a/src/css/image-containers.css
+++ b/src/css/image-containers.css
@@ -68,6 +68,7 @@ img {
   /* Prevent container from expanding - use flex-basis or max-width */
   max-width: 100%;
   flex: 0 1 auto; /* Don't grow, can shrink, auto basis */
+  /* Ensure container doesn't expand beyond image - use aspect ratio if needed */
 }
 
 .single-item-image img {
@@ -80,11 +81,35 @@ img {
   max-height: 100%;
 }
 
+/* If container has explicit dimensions, images should fill it */
+.single-item-image:has(img) {
+  display: flex;
+  align-items: stretch;
+}
+
+.single-item-image .xb-img {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: stretch;
+}
+
 /* Service gallery containers should share space equally */
 .service-gallary .single-item-image {
   flex: 1 1 0; /* Equal flex basis, can grow/shrink */
   min-width: 0; /* Allow shrinking below content size */
   max-width: 100%;
+  /* Prevent height expansion - constrain to reasonable aspect ratio */
+  aspect-ratio: 4 / 3; /* Adjust based on design needs */
+  height: auto;
+}
+
+.service-gallary .single-item-image .xb-img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 /* Image items in general */
