fix(css): exclude form field icons from image container rules to prevent form styling issues

--- a/src/css/image-containers.css
+++ b/src/css/image-containers.css
@@ -1,8 +1,8 @@
 /* Image Container Fixes - Ensures images adapt to container size, not vice versa */
 
 /* Base image rule - images should respect container dimensions */
-/* But exclude form elements and icons that should maintain their size */
-img:not(.xb-item--icon img):not(.xb-contact-form img):not(form img) {
+/* But exclude form elements, icons, and decorative images that should maintain their size */
+img:not(.xb-item--icon img):not(.xb-contact-form img):not(form img):not(.xb-input-field img):not(.xb-select-field img):not(.xb-select-file img):not(.xb-massage-field img):not(.xb-icon img):not(.form-btn img) {
   max-width: 100%;
   height: auto;
   display: block;
@@ -202,6 +202,30 @@ select {
   /* Reset any image-related rules that might affect forms */
   max-width: none;
   box-sizing: border-box;
+}
+
+/* Form icons should maintain their original size - don't apply image container rules */
+.xb-input-field img,
+.xb-select-field img,
+.xb-select-file img,
+.xb-massage-field img,
+.xb-contact-form .xb-input-field img,
+.xb-contact-form .xb-select-field img,
+.xb-contact-form .xb-select-file img,
+.xb-contact-form .xb-massage-field img,
+.xb-contact-input-form .xb-input-field img,
+.xb-contact-input-form .xb-select-field img,
+.xb-contact-input-form .xb-select-file img,
+.xb-contact-input-form .xb-massage-field img,
+.form-btn img,
+.xb-icon img {
+  width: auto !important;
+  height: auto !important;
+  max-width: none !important;
+  max-height: none !important;
+  object-fit: none !important;
+  display: inline-block !important;
+  position: absolute !important;
 }
 
 /* Responsive image containers */
